compilateurDeca/src/test/deca/context/invalid/sans_objet/affectations/type_affectation_incompatible.deca
// Description:
//    Sans-Objet
//    Affectation
//    condition (compatibilité des types) 
//
// Resultats:
//    Ligne 17: 
//        Affectation incompatible : impossible d’affecter (type_rvalue) à (type_lvalue)
// 
// Historique:
//    cree le 06/01/2026

{
    int a = 1;
    bool b = false;

    a = b;
}   